# disease-classification

./: .gitignore  README.md  logger.py  main.py  params.yaml  pyproject.toml  requirements.txt  scores.json  setup.py  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_model_training.ipynb  04_model_evaluation_with_mlflow.ipynb  trials.ipynb
src/cnnClassifier/: __init__.py  logger.py
src/cnnClassifier/components/: data_ingestion.py  model_evaluation_mlflow.py  model_training.py  prepare_base_model.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/log/: logger.py
src/cnnClassifier/pipeline/: __init__.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_model_evaluation.py
src/cnnClassifier/utils/: common.py
