[project]
name = "disease-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dagshub>=0.5.10",
    "ipywidgets>=8.1.7",
    "loguru>=0.7.3",
    "mlflow==2.2.2",
    "pybind11>=2.13.6",
    "setuptools>=80.9.0",
    "tensorflow[and-cuda]==2.17.1",
]

[dependency-groups]
dev = [
    "disease-classification",
    "dvc>=3.60.1",
    "ensure==1.0.2",
    "flask>=2.3.3",
    "flask-cors>=6.0.1",
    "gdown>=5.2.0",
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=1.23.5",
    "pandas>=2.3.0",
    "python-box==6.0.2",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.uv.sources]
disease-classification = { workspace = true }
